Fixed white space edge

--- a/testing.css
+++ b/testing.css
@@ -854,18 +854,26 @@ footer p {
 
 
 
+
+
+
+
+
+
 .hero-image-container-lg {
     display: none;
 }
 
 
-
-
-
 @media (min-width: 2000px) {
     .hero-container {
         display: flex; 
-        justify-content: center;
+        justify-content: space-between;
+    }
+    .hero-row-container {
+        display: flex; 
+        width: 100%;
+        justify-content: space-between;
     }
     .hero-image-container-lg {
         display: block;
